backend/build_errors.txt
    Checking cfg-if v1.0.4
    Checking once_cell v1.21.3
    Checking itoa v1.0.15
    Checking pin-project-lite v0.2.16
    Checking bytes v1.11.0
    Checking futures-core v0.3.31
    Checking fnv v1.0.7
    Checking smallvec v1.15.1
    Checking log v0.4.28
    Checking scopeguard v1.2.0
    Checking pin-utils v0.1.0
    Checking tower-service v0.3.3
    Checking futures-task v0.3.31
    Checking libc v0.2.177
    Checking tracing-core v0.1.34
    Checking lock_api v0.4.14
    Checking futures-channel v0.3.31
    Checking httpdate v1.0.3
    Checking tower-layer v0.3.3
    Checking http v1.3.1
    Checking serde_core v1.0.228
    Checking crossbeam-utils v0.8.21
    Checking futures-util v0.3.31
    Checking bitflags v1.3.2
    Checking http v0.2.12
    Checking parking_lot_core v0.9.12
    Checking signal-hook-registry v1.4.6
    Checking socket2 v0.6.1
    Checking mio v1.1.0
    Checking zerocopy v0.8.28
    Checking httparse v1.10.1
    Checking tracing v0.1.41
    Checking mach2 v0.4.3
    Checking raw-cpuid v10.7.0
    Checking parking_lot v0.12.5
    Checking crossbeam-epoch v0.9.18
    Checking percent-encoding v2.3.2
    Checking try-lock v0.2.5
    Checking regex-syntax v0.8.8
    Checking sync_wrapper v1.0.2
    Checking atomic-waker v1.1.2
    Checking ryu v1.0.20
    Checking want v0.3.1
    Checking tokio v1.48.0
    Checking form_urlencoded v1.2.2
    Checking num_cpus v1.17.0
    Checking socket2 v0.5.10
    Checking core-foundation-sys v0.8.7
    Checking http-body v1.0.1
    Checking crossbeam-deque v0.8.6
    Checking sketches-ddsketch v0.2.2
    Checking mime v0.3.17
    Checking lazy_static v1.5.0
    Checking memchr v2.7.6
    Checking hashbrown v0.12.3
    Checking sharded-slab v0.1.7
    Checking http-body-util v0.1.3
    Checking pin-project v1.1.10
    Checking http-body v0.4.6
    Checking num-traits v0.2.19
    Checking rayon-core v1.13.0
    Checking thiserror v1.0.69
    Checking tracing-log v0.2.0
    Checking thread_local v1.1.9
    Checking iana-time-zone v0.1.64
    Checking bitflags v2.10.0
    Checking base64 v0.21.7
    Checking either v1.15.0
    Checking matchit v0.7.3
    Checking ipnet v2.11.0
    Checking nu-ansi-term v0.50.3
    Checking anyhow v1.0.100
    Checking quanta v0.11.1
    Checking rayon v1.11.0
    Checking indexmap v1.9.3
    Checking regex-automata v0.4.13
    Checking axum-core v0.4.5
    Checking tower v0.4.13
    Checking ahash v0.8.12
    Checking hashbrown v0.13.1
    Checking metrics v0.21.1
    Checking serde v1.0.228
    Checking serde_path_to_error v0.1.20
    Checking serde_json v1.0.145
    Checking metrics-util v0.15.1
    Checking serde_urlencoded v0.7.1
    Checking chrono v0.4.42
    Checking bincode v1.3.3
    Checking matchers v0.2.0
    Checking tracing-subscriber v0.3.20
    Checking hyper v1.8.1
    Checking hyper v0.14.32
    Checking tower v0.5.2
    Checking tower-http v0.5.2
    Checking hyper-util v0.1.18
    Checking axum v0.7.9
    Checking metrics-exporter-prometheus v0.12.2
    Checking vector_db_backend v0.1.0 (/Users/ishan.gupta/Desktop/projects/rust-vector-database/backend)
error[E0433]: failed to resolve: use of undeclared type `Path`
  --> src/main.rs:32:24
   |
32 |     let mut store = if Path::new(&config.snapshot_path).exists() {
   |                        ^^^^ use of undeclared type `Path`
   |
help: consider importing one of these structs
   |
 6 + use std::path::Path;
   |
 6 + use axum::extract::Path;
   |

error[E0425]: cannot find function `load_snapshot` in this scope
  --> src/main.rs:34:9
   |
34 |         load_snapshot(&config.snapshot_path).unwrap_or_else(|e| {
   |         ^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this function
   |
 6 + use crate::store::snapshot::load_snapshot;
   |

error[E0433]: failed to resolve: use of undeclared type `Path`
  --> src/main.rs:43:8
   |
43 |     if Path::new(&config.wal_path).exists() {
   |        ^^^^ use of undeclared type `Path`
   |
help: consider importing one of these structs
   |
 6 + use std::path::Path;
   |
 6 + use axum::extract::Path;
   |

error[E0433]: failed to resolve: use of undeclared type `Wal`
  --> src/main.rs:45:23
   |
45 |         let entries = Wal::read_all(&config.wal_path);
   |                       ^^^ use of undeclared type `Wal`
   |
help: consider importing this struct
   |
 6 + use crate::store::wal::Wal;
   |

error[E0433]: failed to resolve: use of undeclared type `WalEntry`
  --> src/main.rs:48:17
   |
48 |                 WalEntry::Insert { id, vector, metadata } => {
   |                 ^^^^^^^^ use of undeclared type `WalEntry`
   |
help: consider importing this enum
   |
 6 + use crate::store::wal::WalEntry;
   |

error[E0433]: failed to resolve: use of undeclared type `Wal`
  --> src/main.rs:56:24
   |
56 |     let wal = Arc::new(Wal::new(&config.wal_path));
   |                        ^^^ use of undeclared type `Wal`
   |
help: consider importing this struct
   |
 6 + use crate::store::wal::Wal;
   |

warning: unused import: `super::types::Embedding`
 --> src/core/distance.rs:1:5
  |
1 | use super::types::Embedding;
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `cosine_similarity`
 --> src/store/memory.rs:1:29
  |
1 | use crate::core::distance::{cosine_similarity, dot_product, euclidean_distance};
  |                             ^^^^^^^^^^^^^^^^^

warning: unused import: `Document`
 --> src/store/wal.rs:6:37
  |
6 | use crate::core::types::{Embedding, Document};
  |                                     ^^^^^^^^

warning: unused import: `std::collections::HashMap`
 --> src/api/handlers.rs:8:5
  |
8 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.
warning: `vector_db_backend` (bin "vector_db_backend") generated 4 warnings
error: could not compile `vector_db_backend` (bin "vector_db_backend") due to 6 previous errors; 4 warnings emitted
